<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Twitter Client</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="profile_image">Profile Image</string>
    <string name="tweet_message">Tweet Message</string>
    <string name="screen_name">Screen Name</string>
    <string name="at">\@</string>
    <string name="relative_timestamp">Relative Timestamp</string>
    <string name="user_name">User Name</string>
    <string name="tweet">tweet</string>
    <string name="Tweet">Tweet</string>
    <string name="image_preview">Image Preview</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="compose">Compose</string>
</resources>