<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="8dp">

    <RelativeLayout
        android:id="@+id/rlDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/ivDetailProfileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/profile_image"
            android:transitionName="@string/profile_image"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvDetailUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivDetailProfileImage"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/ivDetailProfileImage"
            android:textStyle="bold"
            android:transitionName="@string/user_name"
            tools:text="@string/user_name" />

        <TextView
            android:id="@+id/tvDetailScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvDetailUserName"
            android:layout_alignBottom="@+id/tvDetailUserName"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/tvDetailUserName"
            android:transitionName="@string/screen_name"
            tools:text="@string/screen_name" />

        <TextView
            android:id="@+id/tvDetailRelativeTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvDetailScreenName"
            android:layout_alignBottom="@+id/tvDetailScreenName"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:textStyle="italic"
            android:transitionName="@string/relative_timestamp"
            tools:text="@string/relative_timestamp" />

        <TextView
            android:id="@+id/tvDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivDetailProfileImage"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:autoLink="all"
            android:linksClickable="true"
            android:transitionName="@string/tweet_message"
            tools:text="@string/tweet_message" />

        <ImageView
            android:id="@+id/ivDetailImagePreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDetailText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:contentDescription="@string/image_preview" />
    </RelativeLayout>
</ScrollView>